--- a/index.html
+++ b/index.html
@@ -7,15 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,300;0,600;0,900;1,100;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/sass/custom.css">
-    <title>Bootstrap-5 | Practica </title>
-    <style>
-        @media (min-width: 992px) {
-            .alto-100 {
-                height: 100vh;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="/css/reducido.css">
+    <title>Bootstrap-5 | Cards</title>
 </head> 
 <body>
     <main class="container d-flex align-items-center justify-content-center alto-100">
@@ -24,7 +17,7 @@
             <div class="col-12 col-lg-9">
                 <div class="row">
                     <div class="col-12 col-lg-8 p-2">
-                        <article class="card h-100 bg-success">
+                        <article class="card h-100 bg-primary text-white fondo-card shadow-sm">
                             <div class="card-body">
                                 <div class="d-flex mb-3">
                                     <img src="./images/image-daniel.jpg" alt="" class="border border-secondary-3 rounded-circle">
@@ -41,12 +34,12 @@
                         </article>
                     </div>
                     <div class="col-12 col-lg-4 p-2">
-                        <article class="card h-100 bg-primary">
+                        <article class="card h-100 bg-success text-white shadow-sm">
                             <div class="card-body">
                                 <div class="d-flex mb-3">
                                     <img src="./images/image-patrick.jpg" alt="" class="border border-secondary-3 rounded-circle">
                                     <div class="ps-3">
-                                        <h6 class="m-0 h6">Daniel Clifford</h6>
+                                        <h6 class="m-0 h6">Patrick Clifford</h6>
                                         <p class="m-0 h6">Lorem, ipsum.</p>
                                     </div>
                                 </div>
@@ -57,12 +50,12 @@
                         </article>
                     </div>
                     <div class="col-12 col-lg-4 p-2">
-                        <article class="card h-100 bg-warning">
+                        <article class="card h-100 bg-secondary text-white shadow-sm">
                             <div class="card-body">
                                 <div class="d-flex mb-3">
                                     <img src="./images/image-jonathan.jpg" alt="" class="border border-secondary-3 rounded-circle">
                                     <div class="ps-3">
-                                        <h6 class="m-0 h6">Daniel Clifford</h6>
+                                        <h6 class="m-0 h6">Jonathan Clifford</h6>
                                         <p class="m-0 h6">Lorem, ipsum.</p>
                                     </div>
                                 </div>
@@ -73,12 +66,12 @@
                         </article>
                     </div>
                     <div class="col-12 col-lg-8 p-2">
-                        <article class="card h-100 bg-danger">
+                        <article class="card h-100 bg-dark text-white shadow-sm">
                             <div class="card-body">
                                 <div class="d-flex mb-3">
                                     <img src="./images/image-jeanette.jpg" alt="" class="border border-secondary-3 rounded-circle">
                                     <div class="ps-3">
-                                        <h6 class="m-0 h6">Daniel Clifford</h6>
+                                        <h6 class="m-0 h6">Jeanette Clifford</h6>
                                         <p class="m-0 h6">Lorem, ipsum.</p>
                                     </div>
                                 </div>
@@ -93,12 +86,12 @@
             </div>
             <!-- Columna derecha -->
             <div class="col-12 col-lg-3 p-2">
-                <article class="card h-100 bg-secondary">
+                <article class="card h-100 bg-secondary text-white shadow-sm">
                     <div class="card-body">
                         <div class="d-flex mb-3">
                             <img src="./images/image-kira.jpg" alt="" class="border border-secondary-3 rounded-circle">
                             <div class="ps-3">
-                                <h6 class="m-0 h6">Daniel Clifford</h6>
+                                <h6 class="m-0 h6">Kira Clifford</h6>
                                 <p class="m-0 h6">Lorem, ipsum.</p>
                             </div>
                         </div>
